<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <!-- Doctor Image -->
        <ImageView
            android:id="@+id/doctorImage"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_img"
            android:contentDescription="@string/doctor_image"
            android:layout_marginEnd="12dp" />

        <!-- Info + Edit button -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_label"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_label"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textSpeciality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speciality_label"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- Edit Button -->
        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center_vertical" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
